--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,60 +1,41 @@
 {
   "store.home": {
     "blocks": [
+      "list-context.image-list#home",
       "rich-text",
-      "flex-layout.row",
-      "tab-layout#home"
-      // "slider-layout#home"
+      "flex-layout.row"
+      // "slider-layout#inicio"
+      // "tab-layout#home"
       // "info-card#button-right",
       // "info-card#button-left"
     ]
   },
-  "tab-layout#home": {
-    "children": ["tab-list#home", "tab-content#home"]
-  },
-  "tab-list#home": {
-    "children": ["tab-list.item#home1", "tab-list.item#home2"]
-  },
-  "tab-list.item#home1": {
+  "list-context.image-list#home": {
+    "children": ["slider-layout#home"],
     "props": {
-      "tabId": "livros",
-      "label": "Livros",
-      "defaultActiveTab": true
+      "height": 720,
+      "images": [
+        {
+          "image": "assets/BANNER-WOOD-1.png",
+          "mobileImage": "assets/BANNER-WOOD-1.png"
+        },
+        {
+          "image": "assets/BANNER-WOOD-2.png",
+          "mobileImage": "assets/BANNER-WOOD-2.png"
+        }
+      ]
     }
   },
-  "tab-list.item#home2": {
+  "slider-layout#home": {
     "props": {
-      "label": "SUCESSO",
-      "tabId": "sucesso"
-    }
-  },
-  "tab-content#home": {
-    "children": ["tab-content.item#home1", "tab-content.item#home2"]
-  },
-  "tab-content.item#home1": {
-    "children": ["rich-text#home1"],
-    "props": {
-      "tabId": "livros"
-    }
-  },
-  "tab-content.item#home2": {
-    "children": ["rich-text#home2"],
-    "props": {
-      "tabId": "sucesso"
-    }
-  },
-  "rich-text#home1": {
-    "props": {
-      "text": "Área do conteúdo da tab-list.item com  tabId = livros",
-      "textPosition": "CENTER",
-      "font": "t-heading-3"
-    }
-  },
-  "rich-text#home2": {
-    "props": {
-      "text": "Área do conteúdo da tab-list.item com  tabId = sucesso",
-      "textPosition": "CENTER",
-      "font": "t-heading-3"
+      "itemsPerPage": {
+        "desktop": 1,
+        "tablet": 1,
+        "phone": 1
+      },
+      "infinite": true,
+      "showNavigationArrows": "desktopOnly",
+      "blockClass": "carousel"
     }
   }
 }
