--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,15 +1,71 @@
 {
   "store.home": {
     "blocks": [
+      "tab-layout#home",
+      "flex-layout.row",
       "list-context.image-list#home",
-      "rich-text",
-      "flex-layout.row"
+      "rich-text"
+      
       // "slider-layout#inicio"
       // "tab-layout#home"
       // "info-card#button-right",
       // "info-card#button-left"
     ]
   },
+
+  // Aqui começa o tab-layout
+  
+  "tab-layout#home": {
+    "children": ["tab-list#home", "tab-content#home"]
+  },
+  "tab-list#home": {
+    "children": ["tab-list.item#home1", "tab-list.item#home2"]
+  },
+  "tab-list.item#home1": {
+    "props": {
+      "tabId": "promocao",
+      "label": "Promoção",
+      "defaultActiveTab": true
+    }
+  },
+  "tab-list.item#home2": {
+    "props": {
+      "label": "Livros",
+      "tabId": "livros"
+    }
+  },
+  "tab-content#home": {
+    "children": ["tab-content.item#home1", "tab-content.item#home2"]
+  },
+  "tab-content.item#home1": {
+    "children": ["rich-text#home1"],
+    "props": {
+      "tabId": "promocao"
+    }
+  },
+  "tab-content.item#home2": {
+    "children": ["rich-text#home2"],
+    "props": {
+      "tabId": "livros"
+    }
+  },
+  "rich-text#home1": {
+    "props": {
+      "text": "Área do conteúdo da tab-list.item com  tabId = Promoção",
+      "textPosition": "CENTER",
+      "font": "t-heading-3"
+    }
+  },
+  "rich-text#home2": {
+    "props": {
+      "text": "Área do conteúdo da tab-list.item com  tabId = livros",
+      "textPosition": "CENTER",
+      "font": "t-heading-3"
+    }
+  },
+  
+  //  Aqui começa as imagens do banner principal
+
   "list-context.image-list#home": {
     "children": ["slider-layout#home"],
     "props": {
